# pandastwo

./: README.md  pyproject.toml
pandastwo/: dataframe.py  series.py
test/: test_dataframe.py  test_overall.py  test_series.py
