[project]
name = "pandastwo"
version = "0.1.0"
description = "pandastwo is a light weight pandas alternative that fails hard and fast if fed with mismatched types or series lengths"
authors = [{ name = "Lars Heimann", email = "lars@larsheimann.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.4",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]