[project]
name = "pandastwo"
version = "0.1.0"
description = "pandastwo is a light weight pandas alternative that fails hard and fast if fed with mismatched types or series lengths"
authors = [{ name = "Lars Heimann", email = "lars@larsheimann.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
